--- a/src/main/resources/templates/ecoleCreation.html
+++ b/src/main/resources/templates/ecoleCreation.html
@@ -9,18 +9,18 @@
 <body>
 <h1>Créer une école</h1>
 
-<form th:action="@{/Ecoles/creerEcole}" th:object="${ecole}" method="post">
+<form th:action="@{/View/creerEcole}" th:object="${ecole}" method="post">
     <label for="nomEcole">Nom de l'école :</label>
-    <input type="text" id="nomEcole" th:field="*{nomEcole}" required>
+    <input type="text" id="nomEcole" name="nomEcole" th:field="*{nomEcole}" required>
 
     <label for="adresseEcole">Adresse de l'école :</label>
-    <input type="text" id="adresseEcole" th:field="*{adresseEcole}" required>
+    <input type="text" id="adresseEcole" name="adresseEcole" th:field="*{adresseEcole}" required>
 
     <label for="numeroTelephoneEcole">Numéro de téléphone de l'école :</label>
-    <input type="text" id="numeroTelephoneEcole" th:field="*{numeroTelephoneEcole}" required>
+    <input type="text" id="numeroTelephoneEcole" name="numeroTelephoneEcole" th:field="*{numeroTelephoneEcole}" required>
 
     <label for="emailEcole">email de l'école :</label>
-    <input type="text" id="emailEcole" th:field="*{emailEcole}" required>
+    <input type="email" id="emailEcole" name="emailEcole" th:field="*{emailEcole}" required>
 
     <button type="submit">enregistrer</button>
 </form>
