--- a/src/main/resources/templates/ecoleUpdate.html
+++ b/src/main/resources/templates/ecoleUpdate.html
@@ -16,11 +16,11 @@
     <label for="adresseEcole">Adresse de l'école :</label>
     <input type="text" id="adresseEcole" name="adresseEcole" th:field="*{adresseEcole}" required><br><br>
 
-    <label for="numeroTelephoneEcole">Email de l'école :</label>
-    <input type="text" id="numeroTelephoneEcole" name="emailnumeroTelephoneEcole" th:field="*{numeroTelephoneEcole}" required><br><br>
-
-    <label for="emailEcole">Numéro de téléphone de l'école :</label>
+    <label for="emailEcole">Email de l'école :</label>
     <input type="email" id="emailEcole" name="emailEcole" th:field="*{emailEcole}" required><br><br>
+
+    <label for="numeroTelephoneEcole">Numéro de téléphone de l'école :</label>
+    <input type="text" id="numeroTelephoneEcole" name="numeroTelephoneEcole" th:field="*{numeroTelephoneEcole}" required><br><br>
 
     <button type="submit">Modifier l'ecole</button>
 </form>
